Redo whole site lol

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,68 +1,6 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-1">
-        <ul class="contact-list" itemscope itemtype="http://schema.org/Person">
-          <li itemprop="name">Austin Pray</li>
-          <li itemprop="jobTitle">Full Stack Developer</li>
-          <li itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-            <a itemprop="url" href="https://oncarrot.com"><span itemprop="name">oncarrot.com</span></a>
-          </li>
-          <li itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-            <span itemprop="addressLocality">Dallas</span>, 
-            <span itemprop="addressRegion">TX</span>
-          </li>
-          <li itemprop="email"><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col  footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            <a href="https://github.com/{{ site.github_username }}">
-              <i class="ion-social-octocat"></i>
-              <span class="username">{{ site.github_username }}</span>
-            </a>
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            <a href="https://twitter.com/{{ site.twitter_username }}">
-              <i class="ion-social-twitter"></i>
-              <span class="username">{{ site.twitter_username }}</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.gplus_username %}
-          <li>
-            <a href="https://plus.google.com/{{ site.gplus_username }}" rel="publisher">
-              <i class="ion-social-googleplus"></i>
-              <span class="username">{{ site.gplus_username }}</span>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.stackoverflow %}
-          <li>
-            <a href="{{ site.stackoverflow }}">
-              <i class="ion-link"></i>
-              <span class="username">Stack Overflow</span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
-
+<hr/>
+<footer style="font-size: 80%">
+  <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+  {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}">GitHub</a>{% endif %}
+  {% if site.stackoverflow %}<a href="{{ site.stackoverflow }}">Stack Overflow</a>{% endif %}
 </footer>
-
-{% include scripts.html %}
