--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <hr/>
 <footer style="font-size: 80%">
   <a href="mailto:{{ site.email }}">{{ site.email }}</a>
-  {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}">GitHub</a>{% endif %}
+  {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}">@austinpray on GitHub</a>{% endif %}
   {% if site.stackoverflow %}<a href="{{ site.stackoverflow }}">Stack Overflow</a>{% endif %}
 </footer>
