detecting grayscale colors

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
 <header>
   <h1>
-    <a href="{{ site.baseurl }}/">{{ site.title }}</a>
-    <br/>
-    <small>Full Stack Developer</small>
+    <a style="text-transform: uppercase; text-decoration: none; border: 0.2em solid currentColor; padding: 0 0.25em; " href="{{ site.baseurl }}/">{{ site.title }}</a>
   </h1>
 
   <nav class="site-nav">
