--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,16 +9,20 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <style>
+    :root {
+      --text-color: #212529;
+      --border-color: #dee2e6;
+    }
+
     html, body {
-      margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       font-size: 1rem;
       font-weight: 400;
       line-height: 1.5;
-      color: #212529;
       background-color: #fff;
       -webkit-text-size-adjust: 100%;
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      color: var(--text-color);
     }
 
     @media (min-width: 576px) {
@@ -30,6 +34,41 @@
     @media (min-width: 768px) {
       body {
         font-size: 1.3rem;
+      }
+    }
+
+    pre {
+      overflow-x: auto;
+    }
+    code {
+      white-space: pre;
+    }
+    div.highlight {
+      padding: 1em 0;
+      border-top: 1px solid var(--border-color);
+      border-bottom: 1px solid var(--border-color);
+    }
+    pre.highlight {
+      margin: 0;
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    blockquote {
+      padding: 0 1em;
+      color: #6a737d;
+      border-left: .25em solid var(--border-color);
+    }
+
+    a {
+      word-wrap: break-word;
+    }
+
+    @media (max-width: 375px) {
+      figure {
+        margin: 0;
       }
     }
   </style>
