Backs out of matching tailwind colors

--- a/_includes/2020-05-25-detecting-grayscale-colors/final-table.html
+++ b/_includes/2020-05-25-detecting-grayscale-colors/final-table.html
@@ -216,42 +216,42 @@
 <tr>
 <td style="background:rgb(0, 149, 255)">205&deg;&nbsp;HSV / 
 242&deg;&nbsp;LCh</td>
-<td style="background:rgb(237, 248, 255)">#edf8ff</td><td style="background:rgb(213, 223, 230)">#d5dfe6</td><td style="background:rgb(188, 197, 204)">#bcc5cc</td><td style="background:rgb(162, 172, 179)">#a2acb3</td><td style="background:rgb(136, 146, 153)">#889299</td><td style="background:rgb(111, 121, 128)">#6f7980</td><td style="background:rgb(86, 95, 102)">#565f66</td><td style="background:rgb(61, 70, 77)">#3d464d</td><td style="background:rgb(35, 44, 51)">#232c33</td><td style="background:rgb(0, 15, 26)">#000f1a</td>
+<td style="background:rgb(237, 248, 255)">#edf8ff</td><td style="background:rgb(213, 223, 230)">#d5dfe6</td><td style="background:rgb(188, 197, 204)">#bcc5cc</td><td style="background:rgb(162, 172, 179)">#a2acb3</td><td style="background:rgb(138, 147, 153)">#8a9399</td><td style="background:rgb(112, 121, 128)">#707980</td><td style="background:rgb(87, 96, 102)">#576066</td><td style="background:rgb(62, 70, 77)">#3e464d</td><td style="background:rgb(37, 45, 51)">#252d33</td><td style="background:rgb(8, 18, 26)">#08121a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 128, 255)">210&deg;&nbsp;HSV / 
-252&deg;&nbsp;LCh</td>
-<td style="background:rgb(224, 240, 255)">#e0f0ff</td><td style="background:rgb(200, 215, 230)">#c8d7e6</td><td style="background:rgb(173, 189, 204)">#adbdcc</td><td style="background:rgb(148, 163, 179)">#94a3b3</td><td style="background:rgb(122, 138, 153)">#7a8a99</td><td style="background:rgb(98, 113, 128)">#627180</td><td style="background:rgb(72, 87, 102)">#485766</td><td style="background:rgb(46, 61, 77)">#2e3d4d</td><td style="background:rgb(17, 34, 51)">#112233</td><td style="background:rgb(0, 13, 26)">#000d1a</td>
+251&deg;&nbsp;LCh</td>
+<td style="background:rgb(235, 245, 255)">#ebf5ff</td><td style="background:rgb(211, 220, 230)">#d3dce6</td><td style="background:rgb(186, 195, 204)">#bac3cc</td><td style="background:rgb(161, 170, 179)">#a1aab3</td><td style="background:rgb(135, 144, 153)">#879099</td><td style="background:rgb(110, 119, 128)">#6e7780</td><td style="background:rgb(85, 93, 102)">#555d66</td><td style="background:rgb(60, 68, 77)">#3c444d</td><td style="background:rgb(36, 43, 51)">#242b33</td><td style="background:rgb(9, 17, 26)">#09111a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 106, 255)">215&deg;&nbsp;HSV / 
-260&deg;&nbsp;LCh</td>
-<td style="background:rgb(214, 231, 255)">#d6e7ff</td><td style="background:rgb(190, 207, 230)">#becfe6</td><td style="background:rgb(165, 181, 204)">#a5b5cc</td><td style="background:rgb(141, 157, 179)">#8d9db3</td><td style="background:rgb(116, 132, 153)">#748499</td><td style="background:rgb(92, 107, 128)">#5c6b80</td><td style="background:rgb(67, 82, 102)">#435266</td><td style="background:rgb(44, 57, 77)">#2c394d</td><td style="background:rgb(21, 33, 51)">#152133</td><td style="background:rgb(0, 11, 26)">#000b1a</td>
+259&deg;&nbsp;LCh</td>
+<td style="background:rgb(237, 245, 255)">#edf5ff</td><td style="background:rgb(211, 219, 230)">#d3dbe6</td><td style="background:rgb(186, 193, 204)">#bac1cc</td><td style="background:rgb(161, 168, 179)">#a1a8b3</td><td style="background:rgb(136, 143, 153)">#888f99</td><td style="background:rgb(111, 118, 128)">#6f7680</td><td style="background:rgb(87, 93, 102)">#575d66</td><td style="background:rgb(61, 68, 77)">#3d444d</td><td style="background:rgb(37, 43, 51)">#252b33</td><td style="background:rgb(10, 17, 26)">#0a111a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 85, 255)">220&deg;&nbsp;HSV / 
-267&deg;&nbsp;LCh</td>
-<td style="background:rgb(219, 231, 255)">#dbe7ff</td><td style="background:rgb(195, 207, 230)">#c3cfe6</td><td style="background:rgb(169, 181, 204)">#a9b5cc</td><td style="background:rgb(145, 156, 179)">#919cb3</td><td style="background:rgb(121, 132, 153)">#798499</td><td style="background:rgb(97, 107, 128)">#616b80</td><td style="background:rgb(72, 82, 102)">#485266</td><td style="background:rgb(49, 58, 77)">#313a4d</td><td style="background:rgb(27, 35, 51)">#1b2333</td><td style="background:rgb(0, 9, 26)">#00091a</td>
+266&deg;&nbsp;LCh</td>
+<td style="background:rgb(237, 243, 255)">#edf3ff</td><td style="background:rgb(213, 219, 230)">#d5dbe6</td><td style="background:rgb(188, 193, 204)">#bcc1cc</td><td style="background:rgb(162, 168, 179)">#a2a8b3</td><td style="background:rgb(138, 143, 153)">#8a8f99</td><td style="background:rgb(112, 117, 128)">#707580</td><td style="background:rgb(88, 92, 102)">#585c66</td><td style="background:rgb(63, 67, 77)">#3f434d</td><td style="background:rgb(38, 42, 51)">#262a33</td><td style="background:rgb(12, 16, 26)">#0c101a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 64, 255)">225&deg;&nbsp;HSV / 
-273&deg;&nbsp;LCh</td>
-<td style="background:rgb(227, 234, 255)">#e3eaff</td><td style="background:rgb(202, 209, 230)">#cad1e6</td><td style="background:rgb(177, 184, 204)">#b1b8cc</td><td style="background:rgb(152, 158, 179)">#989eb3</td><td style="background:rgb(127, 133, 153)">#7f8599</td><td style="background:rgb(103, 109, 128)">#676d80</td><td style="background:rgb(79, 84, 102)">#4f5466</td><td style="background:rgb(55, 60, 77)">#373c4d</td><td style="background:rgb(32, 36, 51)">#202433</td><td style="background:rgb(1, 7, 26)">#01071a</td>
+272&deg;&nbsp;LCh</td>
+<td style="background:rgb(240, 244, 255)">#f0f4ff</td><td style="background:rgb(213, 217, 230)">#d5d9e6</td><td style="background:rgb(190, 193, 204)">#bec1cc</td><td style="background:rgb(164, 168, 179)">#a4a8b3</td><td style="background:rgb(139, 143, 153)">#8b8f99</td><td style="background:rgb(113, 117, 128)">#717580</td><td style="background:rgb(89, 92, 102)">#595c66</td><td style="background:rgb(63, 67, 77)">#3f434d</td><td style="background:rgb(39, 42, 51)">#272a33</td><td style="background:rgb(13, 16, 26)">#0d101a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 42, 255)">230&deg;&nbsp;HSV / 
 278&deg;&nbsp;LCh</td>
-<td style="background:rgb(235, 238, 255)">#ebeeff</td><td style="background:rgb(209, 212, 230)">#d1d4e6</td><td style="background:rgb(184, 187, 204)">#b8bbcc</td><td style="background:rgb(159, 162, 179)">#9fa2b3</td><td style="background:rgb(133, 136, 153)">#858899</td><td style="background:rgb(108, 112, 128)">#6c7080</td><td style="background:rgb(85, 88, 102)">#555866</td><td style="background:rgb(60, 62, 77)">#3c3e4d</td><td style="background:rgb(36, 38, 51)">#242633</td><td style="background:rgb(8, 11, 26)">#080b1a</td>
+<td style="background:rgb(242, 244, 255)">#f2f4ff</td><td style="background:rgb(216, 218, 230)">#d8dae6</td><td style="background:rgb(190, 192, 204)">#bec0cc</td><td style="background:rgb(166, 168, 179)">#a6a8b3</td><td style="background:rgb(139, 142, 153)">#8b8e99</td><td style="background:rgb(115, 117, 128)">#737580</td><td style="background:rgb(90, 92, 102)">#5a5c66</td><td style="background:rgb(65, 67, 77)">#41434d</td><td style="background:rgb(40, 42, 51)">#282a33</td><td style="background:rgb(14, 16, 26)">#0e101a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 21, 255)">235&deg;&nbsp;HSV / 
 282&deg;&nbsp;LCh</td>
-<td style="background:rgb(240, 241, 255)">#f0f1ff</td><td style="background:rgb(213, 215, 230)">#d5d7e6</td><td style="background:rgb(188, 189, 204)">#bcbdcc</td><td style="background:rgb(162, 164, 179)">#a2a4b3</td><td style="background:rgb(138, 139, 153)">#8a8b99</td><td style="background:rgb(113, 115, 128)">#717380</td><td style="background:rgb(89, 90, 102)">#595a66</td><td style="background:rgb(63, 65, 77)">#3f414d</td><td style="background:rgb(39, 40, 51)">#272833</td><td style="background:rgb(12, 13, 26)">#0c0d1a</td>
+<td style="background:rgb(242, 243, 255)">#f2f3ff</td><td style="background:rgb(218, 219, 230)">#dadbe6</td><td style="background:rgb(192, 193, 204)">#c0c1cc</td><td style="background:rgb(166, 167, 179)">#a6a7b3</td><td style="background:rgb(141, 142, 153)">#8d8e99</td><td style="background:rgb(116, 117, 128)">#747580</td><td style="background:rgb(91, 92, 102)">#5b5c66</td><td style="background:rgb(66, 67, 77)">#42434d</td><td style="background:rgb(41, 42, 51)">#292a33</td><td style="background:rgb(15, 16, 26)">#0f101a</td>
 </tr>
 <tr>
 <td style="background:rgb(0, 0, 255)">240&deg;&nbsp;HSV / 
 286&deg;&nbsp;LCh</td>
-<td style="background:rgb(242, 242, 255)">#f2f2ff</td><td style="background:rgb(218, 218, 230)">#dadae6</td><td style="background:rgb(192, 192, 204)">#c0c0cc</td><td style="background:rgb(166, 166, 179)">#a6a6b3</td><td style="background:rgb(141, 141, 153)">#8d8d99</td><td style="background:rgb(116, 116, 128)">#747480</td><td style="background:rgb(91, 91, 102)">#5b5b66</td><td style="background:rgb(66, 66, 77)">#42424d</td><td style="background:rgb(41, 41, 51)">#292933</td><td style="background:rgb(15, 15, 26)">#0f0f1a</td>
+<td style="background:rgb(242, 242, 255)">#f2f2ff</td><td style="background:rgb(218, 218, 230)">#dadae6</td><td style="background:rgb(192, 192, 204)">#c0c0cc</td><td style="background:rgb(168, 168, 179)">#a8a8b3</td><td style="background:rgb(142, 142, 153)">#8e8e99</td><td style="background:rgb(117, 117, 128)">#757580</td><td style="background:rgb(92, 92, 102)">#5c5c66</td><td style="background:rgb(67, 67, 77)">#43434d</td><td style="background:rgb(42, 42, 51)">#2a2a33</td><td style="background:rgb(16, 16, 26)">#10101a</td>
 </tr>
 <tr>
 <td style="background:rgb(21, 0, 255)">245&deg;&nbsp;HSV / 
